[gd_scene load_steps=6 format=3 uid="uid://c55yu6ts0pd2u"]

[ext_resource type="Shader" uid="uid://e65vspcm5scn" path="res://UI/outline.gdshader" id="1_cam0p"]
[ext_resource type="Script" uid="uid://comfo0mulauk6" path="res://Entities/Weapons/GunWeapon/Gun/gun.gd" id="1_qld5g"]
[ext_resource type="PackedScene" uid="uid://bjdsn8khtsi4d" path="res://Entities/Weapons/GunWeapon/Bullet/bullet.tscn" id="2_j46j1"]
[ext_resource type="Texture2D" uid="uid://cba05f7vl3d3w" path="res://Toy Box Assets/Tilesets/tbj2_sprites_transparent_padding.png" id="2_qld5g"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_j46j1"]
shader = ExtResource("1_cam0p")
shader_parameter/line_color = Color(0, 0, 0.17254902, 1)
shader_parameter/line_thickness = 1.0

[node name="Gun" type="Node2D"]
script = ExtResource("1_qld5g")
bullet_scene = ExtResource("2_j46j1")

[node name="Sprite2D" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_j46j1")
texture = ExtResource("2_qld5g")
region_enabled = true
region_rect = Rect2(150, 40, 10, 10)

[node name="FireTimer" type="Timer" parent="."]
autostart = true

[node name="BulletContainer" type="Node" parent="."]

[connection signal="timeout" from="FireTimer" to="." method="_on_shoot"]
